--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -15,15 +14,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<!-- Root Layout -->
-<BorderPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<BorderPane prefHeight="700.0" prefWidth="1000.0" styleClass="root-pane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
     <center>
-        <!-- Split Pane for Library/Search and Queue/Lyrics -->
         <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <!-- Left Side: Library, Search, Filter -->
@@ -31,19 +26,21 @@
                     <children>
                         <VBox spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                             <children>
-                                <Label text="Search Library:" styleClass="section-label"/>
+                                <Label styleClass="section-label" text="Search Library" />
                                 <TextField fx:id="searchTextField" promptText="Enter title or artist..." />
-                                <Label text="Filter by Genre:" styleClass="section-label" />
+                                <Label styleClass="section-label" text="Filter by Genre" />
                                 <ComboBox fx:id="genreFilterComboBox" maxWidth="1.7976931348623157E308" promptText="All Genres" />
-                                <Label text="Song Library:" styleClass="section-label"/>
+                                <Label styleClass="section-label" text="Song Library" />
                                 <TableView fx:id="songTableView" VBox.vgrow="ALWAYS">
                                     <columns>
                                         <TableColumn fx:id="titleColumn" prefWidth="150.0" text="Title" />
                                         <TableColumn fx:id="artistColumn" prefWidth="120.0" text="Artist" />
                                     </columns>
-                                    <columnResizePolicy><TableView fx:constant="CONSTRAINED_RESIZE_POLICY" /></columnResizePolicy>
+                                    <columnResizePolicy>
+                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    </columnResizePolicy>
                                 </TableView>
-                                <Button fx:id="addToQueueButton" mnemonicParsing="false" onAction="#handleAddToQueue" text="Add Selected to Queue" maxWidth="1.7976931348623157E308"/>
+                                <Button fx:id="addToQueueButton" mnemonicParsing="false" onAction="#handleAddToQueue" text="Add Selected to Queue" maxWidth="1.7976931348623157E308" />
                             </children>
                         </VBox>
                     </children>
@@ -52,43 +49,50 @@
                 <!-- Right Side: Queue and Lyrics Display -->
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <!-- Parent VBox for Right Side Content -->
                         <VBox spacing="5.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                             <children>
-                                <!-- Queue Display Section using TitledPane -->
+                                <!-- Queue Display Section -->
                                 <TitledPane fx:id="queueTitledPane" animated="false" collapsible="true" expanded="true" styleClass="queue-titled-pane">
                                     <graphic>
-                                        <Label text="Up Next:" styleClass="queue-header-label"/>
+                                        <Label styleClass="queue-header-label" text="Up Next" />
                                     </graphic>
                                     <content>
                                         <VBox fx:id="queueDetailBox" spacing="4.0" styleClass="queue-details">
-                                            <padding><Insets bottom="5.0" left="5.0" right="5.0" top="5.0" /></padding>
                                             <children>
-                                                <Label fx:id="queueSong1Label" text="1. -" styleClass="queue-item-label"/>
-                                                <Label fx:id="queueSong2Label" text="2. -" styleClass="queue-item-label"/>
-                                                <Label fx:id="queueSong3Label" text="3. -" styleClass="queue-item-label"/>
+                                                <Label fx:id="queueSong1Label" styleClass="queue-item-label" text="1. - " />
+                                                <Label fx:id="queueSong2Label" styleClass="queue-item-label" text="2. - " />
+                                                <Label fx:id="queueSong3Label" styleClass="queue-item-label" text="3. - " />
                                             </children>
+                                            <padding>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                            </padding>
                                         </VBox>
                                     </content>
-                                    <VBox.margin><Insets bottom="2.0" /></VBox.margin>
+                                    <VBox.margin>
+                                        <Insets bottom="2.0" />
+                                    </VBox.margin>
                                 </TitledPane>
-                                <!-- Queue Count Label (padding for Label is correctly structured) -->
                                 <Label fx:id="queueCountLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" styleClass="queue-count-label" text="(+0 more)">
-                                    <padding><Insets right="10.0" /></padding>
+                                    <padding>
+                                        <Insets right="10.0" />
+                                    </padding>
                                 </Label>
 
                                 <!-- Lyrics Display Section -->
                                 <VBox fx:id="lyricsContainer" alignment="CENTER" spacing="8.0" styleClass="lyrics-container" VBox.vgrow="ALWAYS">
-                                    <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
                                     <children>
-                                        <Label fx:id="previousLyricLabel" styleClass="other-lyric" text="Previous Lyric Line" textAlignment="CENTER" wrapText="true"/>
-                                        <Label fx:id="currentLyricLabel" styleClass="current-lyric" text="Current Lyric Line Highlighted" textAlignment="CENTER" wrapText="true">
-                                            <VBox.margin><Insets bottom="5.0" top="5.0" /></VBox.margin>
+                                        <Label fx:id="previousLyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
+                                        <Label fx:id="currentLyricLabel" styleClass="current-lyric" textAlignment="CENTER" wrapText="true">
+                                            <VBox.margin>
+                                                <Insets bottom="5.0" top="5.0" />
+                                            </VBox.margin>
                                         </Label>
-                                        <Label fx:id="next1LyricLabel" styleClass="other-lyric" text="Next Lyric Line" textAlignment="CENTER" wrapText="true"/>
-                                        <Label fx:id="next2LyricLabel" styleClass="other-lyric" text="Second Next Lyric Line" textAlignment="CENTER" wrapText="true" />
+                                        <Label fx:id="next1LyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
+                                        <Label fx:id="next2LyricLabel" styleClass="other-lyric" textAlignment="CENTER" wrapText="true" />
                                     </children>
-                                    <VBox.margin><Insets top="10.0" /></VBox.margin>
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
                                 </VBox>
                             </children>
                         </VBox>
@@ -99,41 +103,64 @@
     </center>
     <bottom>
         <VBox spacing="5.0" BorderPane.alignment="CENTER">
-            <padding> <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" /> </padding>
             <children>
                 <!-- Now Playing HBox -->
                 <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="now-playing-bar">
-                    <padding> <Insets left="10.0" right="10.0" top="5.0" bottom="5.0" /> </padding>
+                    <padding>
+                        <Insets left="10.0" right="10.0" top="5.0" bottom="5.0" />
+                    </padding>
                     <children>
-                        <Label text="Now Playing:" styleClass="now-playing-label-title" />
+                        <Label styleClass="now-playing-label-title" text="Now Playing: " />
                         <Label fx:id="nowPlayingTitleLabel" styleClass="now-playing-label-info" text="-" HBox.hgrow="ALWAYS" maxWidth="Infinity"/>
                         <Label fx:id="nowPlayingArtistLabel" styleClass="now-playing-label-info" text="-" minWidth="-Infinity"/>
                     </children>
                 </HBox>
 
-                <!-- HBox for Slider and Time Labels -->
+                <!-- Slider and Time Labels HBox -->
                 <HBox alignment="CENTER" spacing="10.0">
-                    <padding> <Insets left="10.0" right="10.0" /> </padding> 
+                    <padding>
+                        <Insets left="10.0" right="10.0" />
+                    </padding>
                     <children>
                         <Label fx:id="currentTimeLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
                         <Slider fx:id="playbackSlider" HBox.hgrow="ALWAYS" />
                         <Label fx:id="totalDurationLabel" minWidth="-Infinity" styleClass="time-label" text="0:00" />
                     </children>
                 </HBox>
-                <!-- HBox for Control Buttons -->
+
+                <!-- Control Buttons HBox -->
                 <HBox alignment="CENTER" spacing="15.0" styleClass="control-button-bar">
                     <children>
-                        <Button fx:id="playPauseButton" mnemonicParsing="false" prefWidth="80.0" text="Play" onAction="#handlePlayPause" />
-                        <Button fx:id="stopButton" mnemonicParsing="false" text="Stop" onAction="#handleStop" />
-                        <Button fx:id="skipButton" mnemonicParsing="false" text="Skip" onAction="#handleSkip"/>
-                        <ToggleButton fx:id="fullscreenToggleButton" mnemonicParsing="false" text="Fullscreen" onAction="#handleFullscreenToggle" />
-                        <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" text="Dark Mode" onAction="#handleThemeToggle" />
+                        <!-- Leftmost controls -->
+                        <ToggleButton fx:id="fullscreenToggleButton" mnemonicParsing="false" onAction="#handleFullscreenToggle" text="Fullscreen" />
+                        <ToggleButton fx:id="themeToggleButton" mnemonicParsing="false" onAction="#handleThemeToggle" text="Dark Mode" />
+
+                        <Region HBox.hgrow="ALWAYS" /> <!-- Spacer to push center controls -->
+
+                        <!-- Center controls -->
+                        <Button fx:id="playPauseButton" mnemonicParsing="false" onAction="#handlePlayPause" prefWidth="80.0" text="Play" />
+                        <Button fx:id="skipButton" mnemonicParsing="false" onAction="#handleSkip" text="Skip" />
+                        <Button fx:id="stopButton" mnemonicParsing="false" onAction="#handleStop" text="Stop All" />
+                        
+                        <Region HBox.hgrow="ALWAYS" /> <!-- Spacer to push rightmost controls -->
+
+                        <!-- Gap before lyric timing controls (optional, can be adjusted/removed) -->
+                        <Region prefWidth="30.0" />
+
+                        <!-- Rightmost controls: Lyric Timing Adjustment -->
+                        <Button fx:id="increaseOffsetButton" mnemonicParsing="false" onAction="#handleIncreaseOffset" styleClass="lyric-offset-button" text="+" />
+                        <Label fx:id="lyricOffsetLabel" styleClass="lyric-offset-label" text="0 ms">
+                            <HBox.margin>
+                                <Insets left="5.0" right="5.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Button fx:id="decreaseOffsetButton" mnemonicParsing="false" onAction="#handleDecreaseOffset" styleClass="lyric-offset-button" text="-" />
                     </children>
-                    <VBox.margin>
-                        <Insets />
-                    </VBox.margin>
                 </HBox>
             </children>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+            </padding>
         </VBox>
     </bottom>
 </BorderPane>
