--- a/src/view/NormalView.fxml
+++ b/src/view/NormalView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -61,26 +62,12 @@
                                         <Label styleClass="queue-header-label" text="Up Next" />
                                     </graphic>
                                     <content>
-                                        <VBox fx:id="queueDetailBox" spacing="4.0" styleClass="queue-details">
-                                            <padding>
-                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                            </padding>
-                                            <children>
-                                                <Label fx:id="queueSong1Label" styleClass="queue-item-label" text="1. - " />
-                                                <Label fx:id="queueSong2Label" styleClass="queue-item-label" text="2. - " />
-                                                <Label fx:id="queueSong3Label" styleClass="queue-item-label" text="3. - " />
-                                            </children>
-                                        </VBox>
+                                        <ListView fx:id="queueListView" prefHeight="80.0" />
                                     </content>
                                     <VBox.margin>
                                         <Insets bottom="2.0" />
                                     </VBox.margin>
                                 </TitledPane>
-                                <Label fx:id="queueCountLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" styleClass="queue-count-label" text="(+0 more)">
-                                    <padding>
-                                        <Insets right="10.0" />
-                                    </padding>
-                                </Label>
                                 <VBox fx:id="lyricsContainer" alignment="CENTER" spacing="8.0" styleClass="lyrics-container" VBox.vgrow="ALWAYS">
                                     <padding>
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
